@@ -28,6 +28,10 @@ GNU General Public License for more details.
 #include <iostream>
 #include <openbabel/tokenst.h>
 
+#ifndef UNUSED(expr)
+#define UNUSED(expr) { (void)(expr); }
+#endif
+
 namespace OpenBabel
 {
 
@@ -273,8 +277,8 @@ class OBConversion; //used only as pointer
       //! \brief  Base type does nothing
       //! Made virtual around r3535 to simplify code which passes around OBBase*.
       //Currently no title data member in base class.
-      virtual const char  *GetTitle(bool replaceNewlines = true) const { return "";}
-      virtual void  SetTitle(const char *title){}
+      virtual const char  *GetTitle(bool replaceNewlines = true) const { UNUSED(replaceNewlines); return "";}
+      virtual void  SetTitle(const char *) {}
 
       //! \name Generic data handling methods (via OBGenericData)
       //@{
